Bugfix: Option menu hidden behind top of table (if there's only one option).
# Conflicts:
#	styles.css

--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,9 @@ tr.mod-booking-invisible {
     border-radius: 15px;
     border: 1px dashed lightgray;
 }
+
+/* Fix a bug where menu was disappearing behind the top of the table
+if there only was one booking option. */
+#page.container-fluid #region-main div.no-overflow {
+    overflow: visible;
+}
